--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://lazye43_db_user:OOvrXSHTO2Z0DttD@cluster0.n1xnqnp.mongodb.net/spl_auction?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://lazye43_db_user:1234123vk%40@cluster0.n1xnqnp.mongodb.net/spl_auction?retryWrites=true&w=majority&appName=Cluster0
+
